objects/AE_SE_Mappings__c.object
<CustomObject>
    <fields>
        <fullName>Active_Primary_Mappings__c</fullName>
        <label>Active Primary Mappings</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup SE</label>
        <referenceTo>AE_SE_Mappings__c</referenceTo>
        <relationshipLabel>Backup Mappings</relationshipLabel>
        <relationshipName>Backup_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Mapping</label>
        <referenceTo>Mapping__c</referenceTo>
        <relationshipLabel>Primary Mapping</relationshipLabel>
        <relationshipName>Primary_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AE_SE_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AE/SE Mappings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AE/SE Mappings User</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE/SE Mappings</pluralLabel>
    <recordTypes>
        <fullName>AE_Mappings</fullName>
        <active>true</active>
        <description>Lists all SEs mapped to specific AE</description>
        <label>AE Mappings</label>
    </recordTypes>
    <recordTypes>
        <fullName>SE_Mappings</fullName>
        <active>true</active>
        <description>All AEs that are mapped to one particular SE</description>
        <label>SE Mappings</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>